[package]
name = "pelican_game_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
include_dir = { version = "0.7.4", features = ["glob"] }
pelican_ui = {path = "../pelican_ui" }
pelican_ui_std = { path = "../pelican_ui_std" }
serde = "1.0.219"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
